tests/res/traits/error_is_value.say
null is null; // error: `is` is nominal and needs a type name; use `{ ... }` for a structural shape
// @split
null is 0; // error: `is` is nominal and needs a type name; use `{ ... }` for a structural shape
// @split
null is true; // error: `is` is nominal and needs a type name; use `{ ... }` for a structural shape
// @split
null is false; // error: `is` is nominal and needs a type name; use `{ ... }` for a structural shape
// @split
say s = 0;
null is s; // error: 's' is not a type or trait
// @split
trait T {}
say s = T;
null is s; // error: 's' is not a type or trait